--- a/MOVILES/primeraApp/build.gradle
+++ b/MOVILES/primeraApp/build.gradle
@@ -1,4 +1,6 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//ext {
+//    sourceCompatibility = VERSION_1_8
+//}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
