--- a/MOVILES/primeraApp/build.gradle
+++ b/MOVILES/primeraApp/build.gradle
@@ -1,7 +1,9 @@
-//ext {
-//    sourceCompatibility = VERSION_1_8
-//}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    ext {
+        kotlin_version = "1.6.0"
+    }
     repositories {
         google()
         mavenCentral()
@@ -13,6 +15,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 task clean(type: Delete) {
