--- a/PSP/apiFootball/config/config.yaml
+++ b/PSP/apiFootball/config/config.yaml
@@ -1,3 +1,4 @@
- path_base: https://api.football-data.org/v2/
+ #path_base: https://api.football-data.org/v2/
+ path_base: "https://gateway.marvel.com/v1/public/"
 #path_base: http://localhost:8080/JAX-RS-1.0-SNAPSHOT/
 
