--- a/PSP/apiFootball/pom.xml
+++ b/PSP/apiFootball/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>ApiFootball</artifactId>
+    <artifactId>apiFootball</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
+            <version>1.18.20</version>
         </dependency>
         <dependency>
             <groupId>io.vavr</groupId>
