--- a/PSP/CDI_Lombok/pom.xml
+++ b/PSP/CDI_Lombok/pom.xml
@@ -69,6 +69,7 @@
             <artifactId>javax.el-api</artifactId>
             <version>3.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -85,6 +86,30 @@
             <artifactId>javax.el</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
+
+        <!--        <dependency>-->
+<!--            <groupId>javax</groupId>-->
+<!--            <artifactId>javaee-web-api</artifactId>-->
+<!--            <version>8.0.1</version>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    &lt;!&ndash; served by tomcat-annotations-api instead &ndash;&gt;-->
+<!--                    <groupId>javax.validation</groupId>-->
+<!--                    <artifactId>validation-api</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    &lt;!&ndash; served by tomcat-annotations-api instead &ndash;&gt;-->
+<!--                    <groupId>javax.el</groupId>-->
+<!--                    <artifactId>javax.el-api</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+<!--        </dependency>-->
 
 
     </dependencies>
