--- a/MOVILES/RoomViewModel/app/build.gradle
+++ b/MOVILES/RoomViewModel/app/build.gradle
@@ -17,11 +17,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments += [
-                        "room.schemaLocation": "$projectDir/schemas".toString()
-                ]
+                arguments += ["room.schemaLocation": "${rootProject.projectDir}/schemas".toString()]
             }
         }
+
     }
 
     buildTypes {
@@ -32,8 +31,13 @@ android {
     }
 
 
+    buildFeatures {
+        viewBinding = true
+    }
 
     compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -55,8 +59,12 @@ dependencies {
     // Lifecycle libraries
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+
     //by viewModels
     implementation "androidx.fragment:fragment-ktx:1.3.6"
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     // Room libraries
     implementation "androidx.room:room-runtime:$room_version"
