--- a/PSP/JAX-RS/pom.xml
+++ b/PSP/JAX-RS/pom.xml
@@ -49,7 +49,16 @@
             <artifactId>modelmapper</artifactId>
             <version>2.4.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.29</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
 
 
     </dependencies>
