--- a/MOVILES/HiltMenu/app/src/main/AndroidManifest.xml
+++ b/MOVILES/HiltMenu/app/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
     package="com.example.hiltmenu">
 
     <application
+        android:name="com.example.hiltmenu.RoomApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HiltMenu">
+        android:theme="@style/Theme.MaterialComponents.DayNight">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
