--- a/MOVILES/recyclerviewEnhanced/app/build.gradle
+++ b/MOVILES/recyclerviewEnhanced/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "it.xabaras.android:recyclerview-swipedecorator:1.2.3"
 
     //by viewModels
     implementation "androidx.fragment:fragment-ktx:1.3.6"
