--- a/PSP/apiFootball/pom.xml
+++ b/PSP/apiFootball/pom.xml
@@ -72,27 +72,27 @@
         <!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/adapter-rxjava -->
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>adapter-rxjava2</artifactId>
-            <version>2.6.1</version>
+            <artifactId>adapter-rxjava3</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
-            <version>2.6.1</version>
+            <version>2.9.0</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-scalars</artifactId>
-            <version>2.6.1</version>
+            <version>2.9.0</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-gson</artifactId>
-            <version>2.6.1</version>
+            <version>2.9.0</version>
         </dependency>
 
         <dependency>
@@ -106,26 +106,34 @@
             <version>1.1.4</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>io.reactivex.rxjava2</groupId>-->
+<!--            <artifactId>rxjavafx</artifactId>-->
+<!--            <version>2.2.2</version>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.pdfsam.rxjava3/rxjavafx -->
         <dependency>
-            <groupId>io.reactivex.rxjava2</groupId>
+            <groupId>org.pdfsam.rxjava3</groupId>
             <artifactId>rxjavafx</artifactId>
-            <version>2.2.2</version>
+            <version>3.0.2</version>
         </dependency>
+
         <dependency>
-            <groupId>io.reactivex.rxjava2</groupId>
+            <groupId>io.reactivex.rxjava3</groupId>
             <artifactId>rxjava</artifactId>
-            <version>2.2.19</version>
+            <version>3.1.3</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp-urlconnection</artifactId>
-            <version>3.12.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.squareup.okhttp3</groupId>-->
+<!--            <artifactId>okhttp-urlconnection</artifactId>-->
+<!--            <version>3.12.0</version>-->
+<!--        </dependency>-->
 
 
     </dependencies>
