--- a/MOVILES/recyclerviewEnhanced/app/build.gradle
+++ b/MOVILES/recyclerviewEnhanced/app/build.gradle
@@ -38,6 +38,9 @@ android {
     }
 }
 dependencies {
+
+    def retrofitVersion = "2.9.0"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -56,6 +59,13 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.4.0"
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+
 
 
     //dagger hilt
