--- a/PSP/JAX-RS/pom.xml
+++ b/PSP/JAX-RS/pom.xml
@@ -23,6 +23,11 @@
             <version>9.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
 
 <!--        <dependency>-->
