--- a/PSP/JAX-RS/pom.xml
+++ b/PSP/JAX-RS/pom.xml
@@ -27,11 +27,7 @@
             <artifactId>hibernate-hikaricp</artifactId>
             <version>6.0.0.Beta2</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.32</version>
-        </dependency>
+
 
 
         <dependency>
@@ -130,10 +126,18 @@
             <version>2.14.1</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.12.5</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.14.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+
+
 
 
     </dependencies>
