--- a/PSP/Login/Cliente/pom.xml
+++ b/PSP/Login/Cliente/pom.xml
@@ -14,6 +14,11 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-core</artifactId>
+            <version>3.1.4.Final</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/adapter-rxjava -->
         <dependency>
@@ -21,8 +26,6 @@
             <artifactId>adapter-rxjava3</artifactId>
             <version>2.9.0</version>
         </dependency>
-
-
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
