--- a/PSP/encriptacion/pom.xml
+++ b/PSP/encriptacion/pom.xml
@@ -64,8 +64,8 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>1.46</version>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.70</version>
         </dependency>
 
         <dependency>
