--- a/MOVILES/ejemplosExternos/compose-expert-free/app/build.gradle
+++ b/MOVILES/ejemplosExternos/compose-expert-free/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+    implementation "androidx.navigation:navigation-compose:2.4.0"
     implementation "com.github.skydoves:landscapist-coil:1.4.5"
 
     implementation("io.coil-kt:coil-compose:1.4.0")
