--- a/MOVILES/PruebaSimple/app/src/main/AndroidManifest.xml
+++ b/MOVILES/PruebaSimple/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.pruebasimple">
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:name=".framework.PruebaSimpleApp"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,7 +17,7 @@
         android:theme="@style/Theme.PruebaSimple"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".framework.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PruebaSimple">
